chapter06/firewall5.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "AWS in Action: chapter 6 (firewall 5)",
  "Parameters": {
    "KeyName": {
      "Description": "Key Pair name",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "Default": "mykey"
    },
    "VPC": {
      "Description": "Just select the one and only default VPC",
      "Type": "AWS::EC2::VPC::Id"
    },
    "Subnet": {
      "Description": "Just select one of the available subnets",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "IpForSSH": {
      "Description": "Your public IP address to allow SSH access",
      "Type": "String"
    }
  },
  "Mappings": {
    "EC2RegionMap": {
      "ap-northeast-1": {
        "AmazonLinuxAMIHVMEBSBacked64bit": "ami-cbf90ecb"
      },
      "ap-southeast-1": {
        "AmazonLinuxAMIHVMEBSBacked64bit": "ami-68d8e93a"
      },
      "ap-southeast-2": {
        "AmazonLinuxAMIHVMEBSBacked64bit": "ami-fd9cecc7"
      },
      "eu-central-1": {
        "AmazonLinuxAMIHVMEBSBacked64bit": "ami-a8221fb5"
      },
      "eu-west-1": {
        "AmazonLinuxAMIHVMEBSBacked64bit": "ami-a10897d6"
      },
      "sa-east-1": {
        "AmazonLinuxAMIHVMEBSBacked64bit": "ami-b52890a8"
      },
      "us-east-1": {
        "AmazonLinuxAMIHVMEBSBacked64bit": "ami-1ecae776"
      },
      "us-west-1": {
        "AmazonLinuxAMIHVMEBSBacked64bit": "ami-d114f295"
      },
      "us-west-2": {
        "AmazonLinuxAMIHVMEBSBacked64bit": "ami-e7527ed7"
      }
    }
  },
  "Resources": {
    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "My security group",
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "AllowInboundICMP": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "SecurityGroup"
        },
        "IpProtocol": "icmp",
        "FromPort": "-1",
        "ToPort": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "AllowInboundSSH": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "SecurityGroup"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "IpForSSH"
              },
              "/32"
            ]
          ]
        }
      }
    },
    "SecurityGroupPrivate": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "My security group",
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "AllowPrivateInboundSSH": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "SecurityGroupPrivate"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "SourceSecurityGroupId": {
          "Ref": "SecurityGroup"
        }
      }
    },
    "BastionHost": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {
          "Fn::FindInMap": [
            "EC2RegionMap",
            {
              "Ref": "AWS::Region"
            },
            "AmazonLinuxAMIHVMEBSBacked64bit"
          ]
        },
        "InstanceType": "t2.micro",
        "KeyName": {
          "Ref": "KeyName"
        },
        "SecurityGroupIds": [
          {
            "Ref": "SecurityGroup"
          }
        ],
        "SubnetId": {
          "Ref": "Subnet"
        }
      }
    },
    "Server1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {
          "Fn::FindInMap": [
            "EC2RegionMap",
            {
              "Ref": "AWS::Region"
            },
            "AmazonLinuxAMIHVMEBSBacked64bit"
          ]
        },
        "InstanceType": "t2.micro",
        "KeyName": {
          "Ref": "KeyName"
        },
        "SecurityGroupIds": [
          {
            "Ref": "SecurityGroupPrivate"
          }
        ],
        "SubnetId": {
          "Ref": "Subnet"
        }
      }
    },
    "Server2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {
          "Fn::FindInMap": [
            "EC2RegionMap",
            {
              "Ref": "AWS::Region"
            },
            "AmazonLinuxAMIHVMEBSBacked64bit"
          ]
        },
        "InstanceType": "t2.micro",
        "KeyName": {
          "Ref": "KeyName"
        },
        "SecurityGroupIds": [
          {
            "Ref": "SecurityGroupPrivate"
          }
        ],
        "SubnetId": {
          "Ref": "Subnet"
        }
      }
    }
  },
  "Outputs": {
    "BastionHostPublicName": {
      "Value": {
        "Fn::GetAtt": [
          "BastionHost",
          "PublicDnsName"
        ]
      },
      "Description": "Bastion host public name (connect via SSH as user ec2-user)"
    },
    "Server1PublicName": {
      "Value": {
        "Fn::GetAtt": [
          "Server1",
          "PublicDnsName"
        ]
      },
      "Description": "Server1 public name"
    },
    "Server2PublicName": {
      "Value": {
        "Fn::GetAtt": [
          "Server2",
          "PublicDnsName"
        ]
      },
      "Description": "Server2 public name"
    }
  }
}
